# dealopia_api

./: .gitignore  Makefile  README.md  docker-compose.yml  entrypoint.sh  package.json  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml
api/: permissions.py
api/v1/: urls.py
api/v1/serializers/: accounts.py  categories.py  deals.py  locations.py  products.py  shops.py
api/v1/views/: accounts.py  auth.py  categories.py  chatbot.py  deals.py  locations.py  products.py  search.py  shops.py
apps/accounts/: admin.py  apps.py  models.py  services.py  signals.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username_and_more.py  0003_alter_user_managers.py  0004_add_email_change_fields.py  0005_user_sustainability_preference.py
apps/api/: package.json  pyproject.toml  pytest.ini  requirements.txt  wagtail_api.py
apps/api/apps/cms/: api.py  (+2 more)
apps/api/tests/: test_accounts.py  test_categories.py  test_chatbot.py
apps/categories/: apps.py  models.py  services.py  signals.py
apps/categories/migrations/: 0001_initial.py  0002_remove_category_icon_category_is_eco_friendly_and_more.py
apps/chatbot/: hash.py  models.py  services.py
apps/client/: README.md  index.html  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.js  vite.config.ts
apps/client/src/: app.tsx  index.css  main.tsx
apps/cms/: admin.py  api.py  storage.py  urls.py  views.py  wagtail_hooks.py
apps/cms/migrations/: 0001_initial.py  0002_alter_cloudinaryimage_transformation_options.py  0002_cloudinaryimage.transformation_options.py
apps/cms/models/: __init__.py  images.py
apps/dashboard/: views.py
apps/deals/: api.py  apps.py  models.py  pipelines.py  services.py  signals.py  tasks.py
apps/deals/migrations/: 0001_initial.py  0002_deal_eco_certifications_deal_sustainability_score.py
apps/deals/spiders/: deal_spider.py
apps/images/: __init__.py  apps.py  models.py  wagtail_hooks.py
apps/images/migrations/: 0001_initial.py
apps/images/templatetags/: cloudinary_tags.py
apps/locations/: apps.py  geocoding.py  models.py  services.py  signals.py
apps/locations/migrations/: 0001_initial.py  0002_alter_location_city_alter_location_country_and_more.py  0003_remove_location_locations_l_city_ba5543_idx.py
apps/products/: models.py  services.py  signals.py  wagtail.py
apps/products/migrations/: 0002_alter_product_options_product_additional_images_and_more.py
apps/scrapers/: api_services.py  apps.py  captcha_solver.py  data_processing.py  exceptions.py  middlewares.py  models.py  scrapers.py  services.py  signals.py  tasks.py
apps/scrapers/migrations/: 0001_initial.py  0002_remove_scrapeddeal_job_delete_scraperproxy_and_more.py
apps/search/: models.py  services.py
apps/search/web_scraper/: models.py  services.py  signals.py  tasks.py
apps/shops/: apps.py  models.py  services.py  signals.py  wagtail.py
apps/shops/migrations/: 0001_initial.py  0002_alter_shop_options_shop_carbon_neutral_and_more.py  0007_alter_shop_sustainability_score_review.py
apps/web/: README.md  package.json
config/: celery.py  urls.py
config/settings/: base.py  development.py  production.py  staging.py
core/: cloudinary_storage.py  views.py
core/managers/: base.py
core/middleware/: language.py  performance.py  security.py
core/utils/: api.py  cache.py  errors.py  format.py  formatting.py  helpers.py  validators.py
docker/: api.Dockerfile  client.Dockerfile  docker-compose.yml
docs/: repository-standards.md
infra/docs/: README.md  repository-standards.md
infra/monitoring/: prometheus.yml
infra/nginx/: default.conf
scripts/: bootstrap.sh  generate_certs.sh  seed_db.sh
tests/: test_accounts.py  test_cms.py  test_deals.py  test_integration.py  test_locations.py  test_products.py  test_scrapers.py  test_search.py  test_shops.py  test_spider.py
(+62 files in other folders)
