[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dealopia-api"
version = "0.1.0"
description = "Eco-Marketplace Engine: Django 6.0 + Wagtail 7.3"
requires-python = ">=3.12"
dependencies = [
  "django>=6.0a0",
  "wagtail>7.0",
  "djangorestframework>=3.15.2",
  "drf-spectacular>=0.28.0",
  "django-cors-headers>=4.6.0",
  "psycopg[binary]>=3.2.0",  # Psycopg 3 (New Standard)
  "pydantic-settings>=2.7.1",
  "uvicorn[standard]>=0.34.0",
  "whitenoise>=6.8.0",
  "django-lifecycle>=1.2.0",
  "pillow>=11.1.0",
  "python-decouple>=3.8",
]

[tool.uv]
managed = true
package = false
workspace = { members = ["apps/api"] }
prerelease = "allow" # Required to fetch Django 6.0 alphas/betas

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
pythonpath = ["apps/api"]